MC1160-Fix main content overflowing width of browser

--- a/ui/reuse/client/src/components/sideTrowser/sideTrowserBase.scss
+++ b/ui/reuse/client/src/components/sideTrowser/sideTrowserBase.scss
@@ -28,6 +28,7 @@
         > .sideTrowserMain {
             position: relative;
             flex: 1 auto;
+            overflow: auto;
         }
 
         > .sideTrowserContent {
